fixed logo item alignment on index.html

--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ body {
     margin: 0 0 0 0;
 }
 
-
+body a {
+    color: #000000;
+}
 
 .header-bg-img h1 {
     display: flex;
@@ -28,21 +30,7 @@ body {
     padding-top: 25px;
     padding-bottom: 25px;
 }
-/* 
-h1 { 
-    position: absolute;
-    left: -0.49%;
-    right: 0.69%;
-    top: 1.25%;
-    bottom: 95.78%;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 60px;
-    line-height: 73px;
-    text-align: center;
-    color: #FFFFFF;   
-} */
+
 
 h2 {
     color:#0F2940;
@@ -63,25 +51,8 @@ h4 {
 
 
 
-
-.header-text {
-    position: absolute;
-    height: 51px;
-    left: 5.99%;
-    right: 43.47%;
-    top: calc(50% - 51px/2 - 115.5px);
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 42px;
-    line-height: 51px;
-    color: #002E6D;
-}
-
 .body-section {
-    
-    padding-left: 100px;
-    padding-right: 100px;
+    padding: 60px 120px 40px 120px;
 }
 
 .body-text {
@@ -106,27 +77,20 @@ p {
     bottom: 34.76%; */
     /* width: 295px;
     height: 177.7px; */
-    background-image: url('src/img/laptop-mockup.png');
+    background-image: url('src/img/Laptop-Mockup.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-.logo-container {
-    align-items: center;
-    justify-content: center;;
-}
-
 .logo-container ul {
     display: flex;
-    padding-left: 10%;
-    padding-right: 10%;
 }
 
 .logo-item {
-    flex: 1;
+    margin:40px 100px 40px 100px;
     display: block;
-    grid-row: auto;
+    /* grid-row: auto; */
     width: 80px;
     height: 81px;
   
@@ -140,11 +104,11 @@ p {
 
 .logo-container .resource-container {
     display: block;
-    margin-left: calc(20% - 40px);
-}
+    padding-right: 600px;
+    padding-left:0px;
+  }
 
 .main-footer {
-    margin-top: 5%;
     background: #002E6D;
     position: absolute;
     left: 0;
@@ -152,9 +116,6 @@ p {
 }
   
 
-/* .footer-nav {
-
-} */
 
 ul.inline-list {
     display: flex;
@@ -173,7 +134,7 @@ ul.inline-list {
     font-size:24px;
     line-height: 29px;
     list-style-type: none;
-    padding: 15px 0px 0px 20px;
+    padding: 15px 0px 0px 5px;
 
 }
 
